--- a/index.html
+++ b/index.html
@@ -113,10 +113,8 @@
                   </div>
                 </li>
                 <li class="float-right show-for-medium embl-selector">
-                  <button class="button" type="button" data-toggle="embl-dropdown">Hinxton</button>
-                  <div id="embl-dropdown" class="dropdown-pane" data-dropdown data-options="closeOnClick:true;">
-                    to come.
-                  </div>
+                  <button class="button float-right" type="button" data-toggle="embl-dropdown">Hinxton</button>
+                  <!-- The dropdown menu will be programatically added by script.js -->
                 </li>
               </ul>
             </div>
@@ -197,7 +195,7 @@
         <div class="row">
           <div id="main-content-area" class="medium-12 columns">
             <h2>EBI Visual Framework </h2>
-            
+
             <p>For information on building a site, <a href="https://ebiwd.github.io/EBI-Pattern-library/">see the EBI Pattern Library</a>, or if you want to develop further <a href="https://github.com/ebiwd/EBI-Framework">check out the GitHub repo</a>.</p>
          </div>
         </div>
