Stupid auto suggest

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
           <div id="main-content-area" class="">
             
-            <p>This is out of date, see <a href="https://ebiwd.github.io/EBI-Pattern-library/"></a>the updated documentation here</a>.</p>
+            <p>This is out of date, see <a href="https://ebiwd.github.io/EBI-Pattern-library/">the updated documentation here</a>.</p>
 
           </div>
 
