--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <div class="row">
           <div id="main-content-area" class="medium-12 columns">
-            <h2>EBI Visual Framework </h2>
+            <h2>EBI [lite] Visual Framework </h2>
 
             <p>For information on building a site, <a href="https://ebiwd.github.io/EBI-Pattern-library/">see the EBI Pattern Library</a>, or if you want to develop further <a href="https://github.com/ebiwd/EBI-Framework">check out the GitHub repo</a>.</p>
          </div>
