Update landing page

--- a/index.html
+++ b/index.html
@@ -192,13 +192,16 @@
       </nav>
       -->
 
-      <div class="row">
-        <div id="main-content-area" class="medium-12 columns">
-          <h2>EBI Visual Framework </h2>
-
-          <p>For information on building a site, <a href="https://ebiwd.github.io/EBI-Pattern-library/">see the EBI Pattern Library</a>, or if you want to develop further <a href="https://github.com/ebiwd/EBI-Framework">check out the GitHub repo</a>.</p>
-       </div>
-      </div>
+      <div id="main-content-area" class="medium-12 columns">
+        <h2>EBI Visual Framework </h2>
+        <p>This is an early implementation of v1.2 of the framework, for more information:</p>
+        <ul>
+          <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.2" class="readmore">Check out the GitHub branch</a></li>
+          <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Read and discuss the roadmap</a></li>
+          <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Join one of the bi-weekly drop-in clinics</a></li>
+          <li><a href="https://ebiwd.github.io/EBI-Pattern-library/sample-site-v1.2/" class="readmore">Check out the boilerplate templates</a></li>
+        </ul>
+     </div>
 
     </section>
     <!-- End suggested layout containers -->
