Refine framework index.html

--- a/index.html
+++ b/index.html
@@ -131,50 +131,48 @@
           <!-- /local-title -->
 
           <!-- local-nav -->
-              <nav >
-                <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
-                  <li class="active"><a href="#">Overview</a></li>
-                </ul>
-                <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
-                  <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
-                    <ul class="menu js">
-                      <li><a href="#">Item 1A Loooong</a></li>
+          <nav >
+            <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
+              <li class="active"><a href="#">Overview</a></li>
+            </ul>
+            <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
+              <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
+                <ul class="menu js">
+                  <li><a href="#">Item 1A Loooong</a></li>
+                  <li>
+                    <a href='#'> Item 1 sub</a>
+                    <ul class='menu'>
+                      <li><a href='#'>Item 1 subA</a></li>
+                      <li><a href='#'>Item 1 subB</a></li>
                       <li>
                         <a href='#'> Item 1 sub</a>
                         <ul class='menu'>
                           <li><a href='#'>Item 1 subA</a></li>
                           <li><a href='#'>Item 1 subB</a></li>
-                          <li>
-                            <a href='#'> Item 1 sub</a>
-                            <ul class='menu'>
-                              <li><a href='#'>Item 1 subA</a></li>
-                              <li><a href='#'>Item 1 subB</a></li>
-                            </ul>
-                          </li>
-                          <li>
-                            <a href='#'> Item 1 sub</a>
-                            <ul class='menu'>
-                              <li><a href='#'>Item 1 subA</a></li>
-                            </ul>
-                          </li>
                         </ul>
                       </li>
-                      <li><a href="#">Item 1B</a></li>
+                      <li>
+                        <a href='#'> Item 1 sub</a>
+                        <ul class='menu'>
+                          <li><a href='#'>Item 1 subA</a></li>
+                        </ul>
+                      </li>
                     </ul>
-
+                  </li>
+                  <li><a href="#">Item 1B</a></li>
                 </ul>
-              </nav>
+
+            </ul>
+          </nav>
           <!-- /local-nav -->
 
         </div>
-
       </header>
 
-      </div>
+    </div>
   </div>
 
   <div id="content" role="main" class="row">
-
     <!-- Suggested layout containers -->
     <section>
 
@@ -192,13 +190,18 @@
       </nav>
       -->
 
-      <div class="row">
-        <div id="main-content-area" class="medium-12 columns">
-          <h2>EBI Visual Framework </h2>
+      <div id="main-content-area" class="medium-12 columns">
+        <h2>EBI Visual Framework </h2>
+        <p>This is where the file assets for the EBI Visual Framework live.</p>
+        <p>What should you do from here?</p>
+        <ol>
+          <li>For a basic impletation template, check out the source of this page</li>
+          <li><a href="https://ebiwd.github.io/EBI-Pattern-library/meta-patterns/page-structure/" class="readmore">Learn about the structure of EMBL-EBI page layouts</a></li>
+          <li><a href="https://ebiwd.github.io/EBI-Pattern-library/sample-site/" class="readmore">Check out the boilerplate templates</a></li>
+          <li><a href="https://ebiwd.github.io/EBI-Pattern-library/" class="readmore">Check out the pattern library</a></li>
+        </ol>
+     </div>
 
-          <p>For information on building a site, <a href="https://ebiwd.github.io/EBI-Pattern-library/">see the EBI Pattern Library</a>, or if you want to develop further <a href="https://github.com/ebiwd/EBI-Framework">check out the GitHub repo</a>.</p>
-       </div>
-      </div>
 
     </section>
     <!-- End suggested layout containers -->
@@ -226,33 +229,28 @@
       </section>
 
     </div>
-
   </footer>
 
-
   <!-- JavaScript -->
-
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <!--
   <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.10.2.min.js"><\/script>')</script>
   -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <!-- Your custom JavaScript file scan go here... change names accordingly -->
   <!--
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/plugins.js"></script>
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/script.js"></script>
   -->
-  <script defer="defer" src="https://www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/cookiebanner.js"></script>
-  <script defer="defer" src="https://www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/foot.js"></script>
-  <script defer="defer" src="https://www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/script.js"></script>
+  <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/cookiebanner.js"></script>
+  <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/foot.js"></script>
+  <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/script.js"></script>
 
   <!-- The Foundation theme JavaScript -->
-  <script src="https://www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/libraries/foundation-6/js/foundation.js"></script>
-  <script src="https://www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/foundationExtendEBI.js"></script>
+  <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/libraries/foundation-6/js/foundation.js"></script>
+  <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/js/foundationExtendEBI.js"></script>
   <script type="text/JavaScript">$(document).foundation();</script>
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
-<!--
-   -->
 
   <!-- Google Analytics details... -->
   <!-- Change UA-XXXXX-X to be your site's ID -->
