Don't theme off IDs #49

--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
 
   <footer>
     <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
-    <div id="local-footer">
+    <div id="local-footer" class="local-footer">
       <div class="row">
         <span class="reference">How to reference this page: ...</span>
       </div>
     </div>
     <!-- End optional local footer -->
 
-    <div id="global-footer">
+    <div id="global-footer" class="global-footer">
 
       <nav id="global-nav-expanded" class="row">
         <!-- Footer will be automatically inserted by footer.js -->
