Reinstate missing #local-nav anchor

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
           <!-- local-nav -->
               <nav >
-                <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
+                <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
                   <li class="active"><a href="#">Overview</a></li>
                 </ul>
                 <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
