--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
 
   <div data-sticky-container>
-    <div id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="180" data-btm-anchor="300000">
+    <div id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="content:top" data-btm-anchor="content:bottom">
       <header>
 
         <div id="masthead-black-bar" class="clearfix masthead-black-bar">
