Refactor CSS/JS to allow for improved grouping of masthead and footer divs #80

--- a/index.html
+++ b/index.html
@@ -72,50 +72,35 @@
     </ul>
   </div>
 
-  <div data-sticky-container>
-    <div id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="content:top" data-btm-anchor="content:bottom">
-      <header>
+  <header id="masthead-black-bar" class="clearfix masthead-black-bar">
+    <nav class="row">
+      <ul id="global-nav" class="menu">
+        <!-- set active class as appropriate -->
+        <li class="home-mobile"><a href="//www.ebi.ac.uk"></a></li>
+        <li class="home active"><a href="//www.ebi.ac.uk">EMBL-EBI</a></li>
+        <li class="services"><a href="//www.ebi.ac.uk/services">Services</a></li>
+        <li class="research"><a href="//www.ebi.ac.uk/research">Research</a></li>
+        <li class="training"><a href="//www.ebi.ac.uk/training">Training</a></li>
+        <li class="about"><a href="//www.ebi.ac.uk/about">About us</a></li>
+        <li class="search">
+          <a href="#" data-toggle="search-global-dropdown"><span class="show-for-small-only">Search</span></a>
+          <div id="search-global-dropdown" class="dropdown-pane" data-dropdown data-options="closeOnClick:true;">
+          <!-- The dropdown menu will be programatically added by script.js -->
+          </div>
+        </li>
+        <li class="float-right show-for-medium embl-selector">
+          <button class="button float-right" type="button" data-toggle="embl-dropdown">Hinxton</button>
+          <!-- The dropdown menu will be programatically added by script.js -->
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-        <div id="masthead-black-bar" class="clearfix masthead-black-bar">
-          <nav>
-            <div class="row">
-              <ul id="global-nav" class="menu">
-                <!-- set active class as appropriate -->
-                <li class="home-mobile"><a href="//www.ebi.ac.uk"></a></li>
-                <li class="home active"><a href="//www.ebi.ac.uk">EMBL-EBI</a></li>
-                <li class="services"><a href="//www.ebi.ac.uk/services">Services</a></li>
-                <li class="research"><a href="//www.ebi.ac.uk/research">Research</a></li>
-                <li class="training"><a href="//www.ebi.ac.uk/training">Training</a></li>
-                <li class="about"><a href="//www.ebi.ac.uk/about">About us</a></li>
-                <li class="search">
-                  <a href="#" data-toggle="search-global-dropdown"><span class="show-for-small-only">Search</span></a>
-                  <div id="search-global-dropdown" class="dropdown-pane" data-dropdown data-options="closeOnClick:true;">
-                    <form id="global-search" name="global-search" action="/ebisearch/search.ebi" method="GET">
-                      <fieldset>
-                        <div class="input-group">
-                          <input type="text" name="query" id="global-searchbox" class="input-group-field" placeholder="Search all of EMBL-EBI">
-                          <div class="input-group-button">
-                            <input type="submit" name="submit" value="Search" class="button">
-                            <input type="hidden" name="db" value="allebi" checked="checked">
-                            <input type="hidden" name="requestFrom" value="masthead-black-bar" checked="checked">
-                          </div>
-                        </div>
-                      </fieldset>
-                    </form>
-                  </div>
-                </li>
-                <li class="float-right show-for-medium embl-selector">
-                  <button class="button float-right" type="button" data-toggle="embl-dropdown">Hinxton</button>
-                  <!-- The dropdown menu will be programatically added by script.js -->
-                </li>
-              </ul>
-            </div>
-          </nav>
-
-        </div>
-
+  <!-- Suggested layout containers / #content -->
+  <div id="content">
+    <div data-sticky-container>
+      <div id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="content:top" data-btm-anchor="content:bottom">
         <div class="masthead-inner row">
-
           <!-- local-title -->
           <div class="columns medium-7" id="local-title">
             <h1><a href="[service-url]" title="Back to [service-name] homepage">EBI Framework</a></h1>
@@ -123,105 +108,87 @@
           <!-- /local-title -->
 
           <!-- local-nav -->
-              <nav >
-                <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
-                  <li class="active"><a href="#">Overview</a></li>
-                </ul>
-                <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
-                  <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
-                    <ul class="menu js">
-                      <li><a href="#">Item 1A Loooong</a></li>
-                      <li>
-                        <a href='#'> Item 1 sub</a>
-                        <ul class='menu'>
-                          <li><a href='#'>Item 1 subA</a></li>
-                          <li><a href='#'>Item 1 subB</a></li>
-                          <li>
-                            <a href='#'> Item 1 sub</a>
-                            <ul class='menu'>
-                              <li><a href='#'>Item 1 subA</a></li>
-                              <li><a href='#'>Item 1 subB</a></li>
-                            </ul>
-                          </li>
-                          <li>
-                            <a href='#'> Item 1 sub</a>
-                            <ul class='menu'>
-                              <li><a href='#'>Item 1 subA</a></li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </li>
-                      <li><a href="#">Item 1B</a></li>
-                    </ul>
-
-                </ul>
-              </nav>
+          <nav>
+            <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
+              <li class="active"><a href="#">Overview</a></li>
+            </ul>
+            <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
+              <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
+              <ul class="menu js">
+                <li><a href="#">Item 1A Loooong</a></li>
+                <li>
+                  <a href='#'> Item 1 sub</a>
+                  <ul class='menu'>
+                    <li><a href='#'>Item 1 subA</a></li>
+                    <li><a href='#'>Item 1 subB</a></li>
+                    <li>
+                      <a href='#'> Item 1 sub</a>
+                      <ul class='menu'>
+                        <li><a href='#'>Item 1 subA</a></li>
+                        <li><a href='#'>Item 1 subB</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href='#'> Item 1 sub</a>
+                      <ul class='menu'>
+                        <li><a href='#'>Item 1 subA</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="#">Item 1B</a></li>
+              </ul>
+            </ul>
+          </nav>
           <!-- /local-nav -->
-
         </div>
-
-      </header>
-
       </div>
-  </div>
+    </div>
 
-  <div id="content" role="main" class="row">
+    <!-- Your menu structure should make a breadcrumb redundant, but if a breadcrump is needed uncomment the below -->
+    <!--
+    <nav aria-label="You are here:" role="navigation">
+      <ul class="breadcrumbs">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Parent</a></li>
+        <li class="disabled">Disabled</li>
+        <li>
+          <span class="show-for-sr">Current: </span> This page
+        </li>
+      </ul>
+    </nav>
+    -->
 
-    <!-- Suggested layout containers -->
-    <section>
-
-      <!-- Your menu structure should make a breadcrumb redundant, but if a breadcrump is needed uncomment the below -->
-      <!--
-      <nav aria-label="You are here:" role="navigation">
-        <ul class="breadcrumbs">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Parent</a></li>
-          <li class="disabled">Disabled</li>
-          <li>
-            <span class="show-for-sr">Current: </span> This page
-          </li>
-        </ul>
-      </nav>
-      -->
-
-      <div id="main-content-area" class="medium-12 columns">
-        <h2>EBI Visual Framework</h2>
-        <p>This is a development implementation of the EBI Visual Framework v1.2; for more information:</p>
-        <ul>
-          <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.2" class="readmore">Check out the GitHub branch</a></li>
-          <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Read and discuss the roadmap</a></li>
-          <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Join one of the bi-weekly drop-in clinics</a></li>
-          <li><a href="https://ebiwd.github.io/EBI-Pattern-library/sample-site-v1.2/" class="readmore">Check out the boilerplate templates</a></li>
-        </ul>
-     </div>
-
+    <section id="main-content-area" class="row" role="main">
+      <h2>EBI Visual Framework</h2>
+      <p>This is a development implementation of the EBI Visual Framework v1.2; for more information:</p>
+      <ul>
+        <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.2" class="readmore">Check out the GitHub branch</a></li>
+        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Read and discuss the roadmap</a></li>
+        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Join one of the bi-weekly drop-in clinics</a></li>
+        <li><a href="https://ebiwd.github.io/EBI-Pattern-library/sample-site-v1.2/" class="readmore">Check out the boilerplate templates</a></li>
+      </ul>
     </section>
-    <!-- End suggested layout containers -->
 
-  </div>
-
-
-  <footer>
     <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
-    <div id="local-footer" class="local-footer">
+    <section id="local-footer" class="local-footer" role="local-footer">
       <div class="row">
         <span class="reference">How to reference this page: ...</span>
       </div>
-    </div>
+    </section>
     <!-- End optional local footer -->
+  </div>
+  <!-- End suggested layout containers / #content -->
 
+  <footer>
     <div id="global-footer" class="global-footer">
-
       <nav id="global-nav-expanded" class="global-nav-expanded row">
         <!-- Footer will be automatically inserted by footer.js -->
       </nav>
-
       <section id="ebi-footer-meta" class="ebi-footer-meta row">
         <!-- Footer meta will be automatically inserted by footer.js -->
       </section>
-
     </div>
-
   </footer>
 
 
